--- a/ResoniteBakery/ResoniteBakery.csproj
+++ b/ResoniteBakery/ResoniteBakery.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{0779CE25-65D8-4317-AEF5-CCFE1FC9196A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NeosBakery</RootNamespace>
-    <AssemblyName>NeosBakery</AssemblyName>
+    <RootNamespace>ResoniteBakery</RootNamespace>
+    <AssemblyName>ResoniteBakery</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -83,11 +83,20 @@
     <Compile Include="Core\ProceduralMeshDefinitions.cs" />
     <Compile Include="Core\Extensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Python\bake.py">
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Python\bake.py">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
